--- a/src/assets/styles/home.module.css
+++ b/src/assets/styles/home.module.css
@@ -1,6 +1,12 @@
+html,
+body {
+  background-color: #121212;
+  color: rgba(255, 255, 255, 0.795);
+}
+
 :root {
-  --btn-cta: #1A6BE0;
-  --btn-learn: #144CA0;
+  --btn-cta: #1a6be0;
+  --btn-learn: #144ca0;
 }
 
 .cta {
@@ -9,33 +15,36 @@
   gap: 2.5rem;
   align-items: center;
   justify-content: center;
+  position: relative;
+  top: 20rem;
 }
 
 .hero {
   height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  background-image: url(../images/hero-mobile.jpg);
+  background-image: linear-gradient(
+    180deg,
+    rgba(41, 41, 41, 0.695) 75%,
+    rgba(41, 41, 41, 0.695) 25%),
+    url(../images/studio-hero.jpg);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 70% 30%;
+  background-position: 43% 100%;
   color: rgba(255, 255, 255, 0.986);
   text-align: center;
 }
 
 .headline {
-    position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    font-size: 1.2rem;
-    padding: 0 1.5rem;
-    letter-spacing: 2px;
-    animation: slidein 2s;
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  font-size: 1.2rem;
+  padding: 0 1.5rem;
+  letter-spacing: 2px;
+  animation: slidein 2s;
 }
 
 .button {
@@ -60,51 +69,63 @@
   cursor: pointer;
 }
 @keyframes fadeIn {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @-moz-keyframes fadeIn {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @-webkit-keyframes fadeIn {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes slidein {
-    from {
-        top: -3rem;
-        opacity: 0;
-    }
-    to {
-        top: 0rem;
-        opacity: 1;
-    }
+  from {
+    top: -3rem;
+    opacity: 0;
+  }
+  to {
+    top: 0rem;
+    opacity: 1;
+  }
 }
 
 @-moz-keyframes slidein {
-    from {
-        top: -3rem;
-        opacity: 0;
-    }
-    to {
-        top: 0rem;
-        opacity: 1;
-    }
+  from {
+    top: -3rem;
+    opacity: 0;
+  }
+  to {
+    top: 0rem;
+    opacity: 1;
+  }
 }
 
 @-webkit-keyframes slidein {
-    from {
-        top: -3rem;
-        opacity: 0;
-    }
-    to {
-        top: 0rem;
-        opacity: 1;
-    }
+  from {
+    top: -3rem;
+    opacity: 0;
+  }
+  to {
+    top: 0rem;
+    opacity: 1;
+  }
 }
 
 .offer {
@@ -113,49 +134,53 @@
   right: 0;
   left: 0;
   color: #ffffff;
-
 }
 
 .chevron {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 1rem;
-    height: 2rem;
-    width: 2rem;
-    margin: auto;
-    color: #ffffff;
-    font-weight: lighter;
-    animation: bounce 2s infinite;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 1rem;
+  height: 2rem;
+  width: 2rem;
+  margin: auto;
+  color: #ffffff;
+  font-weight: lighter;
+  animation: bounce 2s infinite;
 }
 
-  @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      -moz-transform: translateY(0);
-      -ms-transform: translateY(0);
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-    }
-    40% {
-      -moz-transform: translateY(-10px);
-      -ms-transform: translateY(-10px);
-      -webkit-transform: translateY(-10px);
-      transform: translateY(-10px);
-    }
-    60% {
-      -moz-transform: translateY(-5px);
-      -ms-transform: translateY(-5px);
-      -webkit-transform: translateY(-5px);
-      transform: translateY(-5px);
-    }
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
   }
-  
+  40% {
+    -moz-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  60% {
+    -moz-transform: translateY(-5px);
+    -ms-transform: translateY(-5px);
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
+}
+
 .degrees {
   margin: 5rem 0;
   padding: 0 1.5rem;
 }
 
-.masterPiano, .doctorPiano {
+.masterPiano,
+.doctorPiano {
   height: 15rem;
   max-width: 80vw;
   object-fit: contain;
@@ -193,28 +218,28 @@
 }
 
 .description {
-    padding-top: 1.5rem;
-    line-height: 1.7;
+  padding-top: 1.5rem;
+  line-height: 1.7;
 }
 
 .about {
-    text-align: center;
-    margin: 7rem 0;
-    scroll-margin-top: 8rem;
+  text-align: center;
+  margin: 7rem 0;
+  scroll-margin-top: 8rem;
 }
 
 .about__container {
-    padding: 0 1.5rem;
+  padding: 0 1.5rem;
 }
 
-.video {
+/* .video {
   background-color: black;
-}
+} */
 
 .video__player {
-    width: 100%;
-    height: 18rem;
-    position: relative;
-    bottom: 0;
-    left: 0;
+  width: 100%;
+  height: 18rem;
+  position: relative;
+  bottom: 0;
+  left: 0;
 }
